# central-alertas

./: .gitignore  CMakeLists.txt  README.md  alerta.cpp  alerta.hpp  central.cpp  central.hpp  main.cpp
alertas/: alerta_aviso.cpp  alerta_aviso.hpp  alerta_critico.cpp  alerta_critico.hpp  alerta_debug.cpp  alerta_debug.hpp  alerta_info.cpp  alerta_info.hpp
